--- a/app/src/main/res/menu/menu_drawer_layout.xml
+++ b/app/src/main/res/menu/menu_drawer_layout.xml
@@ -1,22 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:id="@+id/currentTripFragment"
-        android:title="@string/currentTripFragment_name" />
-    <item
-        android:id="@+id/locationsFragment"
-        android:title="@string/locationsFragment_name" />
-    <item
-        android:id="@+id/routesFragment"
-        android:title="@string/routesFragment_name" />
-    <item
-        android:id="@+id/myLocationsFragment"
-        android:title="@string/myLocationsFragment_name" />
-    <item
-        android:id="@+id/myRoutesFragment"
-        android:title="@string/myRoutesFragment_name" />
-    <item
-        android:id="@+id/settingsFragment"
-        android:title="@string/settingsFragment_name" />
+    <group
+        android:id="@+id/menu_current"
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/currentTripFragment"
+            android:icon="@drawable/ic_baseline_directions_walk_24"
+            android:title="@string/currentTripFragment_name" />
+    </group>
+    <group
+        android:id="@+id/menu_online"
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/locationsFragment"
+            android:icon="@drawable/ic_baseline_location_on_24"
+            android:title="@string/locationsFragment_name" />
+        <item
+            android:id="@+id/routesFragment"
+            android:icon="@drawable/ic_baseline_timeline_24"
+            android:title="@string/routesFragment_name" />
+    </group>
+    <group
+        android:id="@+id/menu_local"
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/myLocationsFragment"
+            android:icon="@drawable/ic_baseline_location_on_24"
+            android:title="@string/myLocationsFragment_name" />
+        <item
+            android:id="@+id/myRoutesFragment"
+            android:icon="@drawable/ic_baseline_timeline_24"
+            android:title="@string/myRoutesFragment_name" />
+    </group>
+    <group
+        android:id="@+id/menu_settings"
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/settingsFragment"
+            android:icon="@drawable/ic_baseline_settings_24"
+            android:title="@string/settingsFragment_name" />
+    </group>
 </menu>
