--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/currentTripFragment">
+    app:startDestination="@id/homeFragment">
 
     <fragment
         android:id="@+id/currentTripFragment"
@@ -35,4 +35,9 @@
         android:name="com.example.touristtrips.SettingsFragment"
         android:label="@string/settingsFragment_name"
         tools:layout="@layout/fragment_settings" />
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.example.touristtrips.HomeFragment"
+        android:label="Home"
+        tools:layout="@layout/fragment_home" />
 </navigation>
