--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -28,6 +28,9 @@
         <action
             android:id="@+id/action_myLocationsFragment_to_addLocationFragment"
             app:destination="@id/addLocationFragment" />
+        <action
+            android:id="@+id/action_myLocationsFragment_to_locationFragment"
+            app:destination="@id/locationFragment" />
     </fragment>
     <fragment
         android:id="@+id/myRoutesFragment"
@@ -47,6 +50,30 @@
     <fragment
         android:id="@+id/addLocationFragment"
         android:name="com.example.touristtrips.feature_location.presentation.locations.AddEditLocationFragment"
-        android:label="fragment_add_location"
-        tools:layout="@layout/fragment_add_edit_location" />
+        android:label="Edit Location"
+        tools:layout="@layout/fragment_add_edit_location" >
+        <argument
+            android:name="locationId"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="null" />
+        <action
+            android:id="@+id/action_addLocationFragment_to_locationFragment"
+            app:destination="@id/locationFragment" />
+        <action
+            android:id="@+id/action_addLocationFragment_to_myLocationsFragment"
+            app:destination="@id/myLocationsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/locationFragment"
+        android:name="com.example.touristtrips.feature_location.presentation.locations.LocationFragment"
+        android:label="Location"
+        tools:layout="@layout/fragment_location" >
+        <argument
+            android:name="locationId"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_locationFragment_to_addLocationFragment"
+            app:destination="@id/addLocationFragment" />
+    </fragment>
 </navigation>
