--- a/app/src/main/res/layout/fragment_route_location_selection.xml
+++ b/app/src/main/res/layout/fragment_route_location_selection.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".feature_route.presentation.all_routes_list.MyRoutesFragment">
+    tools:context=".feature_route.presentation.route.RouteLocationSelectionFragment">
 
     <com.airbnb.epoxy.EpoxyRecyclerView
         android:id="@+id/epoxyRecyclerView"
@@ -17,6 +17,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/model_route_item"/>
+        tools:listitem="@layout/model_location_item"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
