--- a/app/src/main/res/menu/menu_route.xml
+++ b/app/src/main/res/menu/menu_route.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/menuMap"
+        android:icon="@drawable/ic_baseline_map_32"
+        android:title="@string/map"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/menuEdit"
         android:icon="@drawable/ic_baseline_edit_32"
         android:title="@string/edit"
