--- a/app/src/main/res/layout/fragment_my_locations.xml
+++ b/app/src/main/res/layout/fragment_my_locations.xml
@@ -13,6 +13,7 @@
         android:layout_height="match_parent"
         android:paddingBottom="26dp"
         android:clipToPadding="false"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
