--- a/app/src/main/res/layout/model_location_item.xml
+++ b/app/src/main/res/layout/model_location_item.xml
@@ -5,9 +5,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginHorizontal="16dp"
-    android:layout_marginTop="16dp"
+    android:layout_marginBottom="16dp"
     app:cardCornerRadius="8dp"
-    app:cardElevation="16dp">
+    app:cardElevation="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
         android:id="@+id/headerImageView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:contentDescription="Header Image"
+        android:contentDescription="@string/header_image"
         android:scaleType="centerCrop"
         app:layout_constraintDimensionRatio="16:9"
         app:layout_constraintEnd_toEndOf="parent"
