--- a/app/src/main/res/layout/fragment_route.xml
+++ b/app/src/main/res/layout/fragment_route.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".feature_route.presentation.route.RouteFragment"
+    tools:context=".feature_route.presentation.route.MyRouteFragment"
     android:clipChildren="false"
     android:clipToPadding="false">
 
