--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -9,7 +9,7 @@
     You can also add your credentials to an existing key, using these values:
 
     Package name:
-    com.example.touristtrips.feature_route.presentation.route_map
+    com.example.touristtrips.core.presentation.routes.route_map
 
     SHA-1 certificate fingerprint:
     3B:A8:B8:86:6E:9B:D6:3C:E6:4C:94:FB:53:23:DC:EE:42:4B:AF:3F
@@ -20,5 +20,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCyGDI9IH-SK6vkPPA9OiYUwahko8skOLI</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyB-nEYohV18Sj2qw11gfyfuFuvvd17_IXs</string>
 </resources>
