--- a/app/src/main/res/layout/model_route_item.xml
+++ b/app/src/main/res/layout/model_route_item.xml
@@ -5,9 +5,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginHorizontal="16dp"
-    android:layout_marginTop="16dp"
+    android:layout_marginBottom="16dp"
     app:cardCornerRadius="8dp"
-    app:cardElevation="16dp">
+    app:cardElevation="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
