--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,15 +10,6 @@
         android:label="@string/currentTripFragment_name"
         tools:layout="@layout/fragment_current_trip" />
     <fragment
-        android:id="@+id/locationsFragment"
-        android:name="com.example.touristtrips.feature_online_location.presentation.locations.LocationsFragment"
-        android:label="@string/locationsFragment_name"
-        tools:layout="@layout/fragment_locations" >
-        <action
-            android:id="@+id/action_locationsFragment_to_locationFragment2"
-            app:destination="@id/locationFragment" />
-    </fragment>
-    <fragment
         android:id="@+id/routesFragment"
         android:name="com.example.touristtrips.feature_online_route.presentation.routes.RoutesFragment"
         android:label="@string/routesFragment_name"
@@ -26,6 +17,9 @@
         <action
             android:id="@+id/action_routesFragment_to_routeFragment"
             app:destination="@id/routeFragment" />
+        <action
+            android:id="@+id/action_routesFragment_to_sortOrderBottomSheetDialogFragment"
+            app:destination="@id/locations_graph" />
     </fragment>
     <fragment
         android:id="@+id/myLocationsFragment"
@@ -38,6 +32,9 @@
         <action
             android:id="@+id/action_myLocationsFragment_to_locationFragment"
             app:destination="@id/myLocationFragment" />
+        <action
+            android:id="@+id/action_myLocationsFragment_to_sortOrderBottomSheetDialogFragment"
+            app:destination="@id/locations_graph" />
     </fragment>
     <fragment
         android:id="@+id/myRoutesFragment"
@@ -50,6 +47,9 @@
         <action
             android:id="@+id/action_myRoutesFragment_to_routeFragment"
             app:destination="@id/myRouteFragment" />
+        <action
+            android:id="@+id/action_myRoutesFragment_to_sortOrderBottomSheetDialogFragment"
+            app:destination="@id/locations_graph" />
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
@@ -60,7 +60,11 @@
         android:id="@+id/homeFragment"
         android:name="com.example.touristtrips.HomeFragment"
         android:label="@string/homeFragment_name"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_locations_graph"
+            app:destination="@id/locations_graph" />
+    </fragment>
     <fragment
         android:id="@+id/addLocationFragment"
         android:name="com.example.touristtrips.feature_location.presentation.locations.AddEditLocationFragment"
@@ -162,18 +166,6 @@
             android:defaultValue="@null" />
     </fragment>
     <fragment
-        android:id="@+id/locationFragment"
-        android:name="com.example.touristtrips.feature_online_location.presentation.locations.LocationFragment"
-        android:label="@string/locationFragment_name"
-        tools:layout="@layout/fragment_location" >
-        <argument
-            android:name="locationId"
-            app:argType="string" />
-        <action
-            android:id="@+id/action_locationFragment_to_locationMapsFragment"
-            app:destination="@id/locationMapsFragment" />
-    </fragment>
-    <fragment
         android:id="@+id/routeFragment"
         android:name="com.example.touristtrips.feature_online_route.presentation.routes.RouteFragment"
         android:label="@string/routeFragment_name"
@@ -201,5 +193,37 @@
             app:nullable="true"
             android:defaultValue="@null" />
     </fragment>
+    <navigation android:id="@+id/locations_graph"
+        app:startDestination="@id/locationsFragment">
+
+        <fragment
+            android:id="@+id/locationsFragment"
+            android:name="com.example.touristtrips.feature_online_location.presentation.locations.LocationsFragment"
+            android:label="@string/locationsFragment_name"
+            tools:layout="@layout/fragment_locations">
+            <action
+                android:id="@+id/action_locationsFragment_to_locationFragment2"
+                app:destination="@id/locationFragment" />
+            <action
+                android:id="@+id/action_locationsFragment_to_sortOrderBottomSheetDialogFragment"
+                app:destination="@id/sortOrderBottomSheetDialogFragment" />
+        </fragment>
+        <fragment
+            android:id="@+id/locationFragment"
+            android:name="com.example.touristtrips.feature_online_location.presentation.locations.LocationFragment"
+            android:label="@string/locationFragment_name"
+            tools:layout="@layout/fragment_location">
+            <argument
+                android:name="locationId"
+                app:argType="string" />
+            <action
+                android:id="@+id/action_locationFragment_to_locationMapsFragment"
+                app:destination="@id/locationMapsFragment" />
+        </fragment>
+        <dialog
+            android:id="@+id/sortOrderBottomSheetDialogFragment"
+            android:name="com.example.touristtrips.feature_online_location.presentation.locations.SortBottomSheetLocationsFragment"
+            android:label="SortOrderBottomSheetDialogFragment" />
+    </navigation>
 
 </navigation>
